add am to languages

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -242,7 +242,8 @@
         "ta": "Tamil",
         "ti": "Tigrinya",
         "uk": "Ukrainian",
-        "sv": "Swedish"
+        "sv": "Swedish",
+        "am": "Armenian"
     },
     "overlay": {
         "close": "Close",
