--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -212,6 +212,7 @@
         "sg": "Tamoul",
         "ta": "Tamoul",
         "ti": "Tigrigna",
+        "am": "Arménienne",
         "chooseTime": "Choisissez une heure",
         "selectTimezone": "Sélectionner le fuseau horaire",
         "chooseDate": "Choisissez une date",
