--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -240,7 +240,8 @@
         "ta": "Тамільська",
         "ti": "Тігринья",
         "uk": "Українська",
-        "sv": "Шведська"
+        "sv": "Шведська",
+        "am": "Вірменський"
     },
     "overlay": {
         "close": "Закрити",
