--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-hcw-athome-caregiver (0.5.22) UNRELEASED; urgency=medium
+hcw-athome-caregiver (0.5.23) UNRELEASED; urgency=medium
 
   [ Olivier Bitsch ]
   * Update changelog for 0.5.20 release
@@ -21,8 +21,9 @@ hcw-athome-caregiver (0.5.22) UNRELEASED; urgency=medium
   * update error message
   * add am to languages
   * refs #7995, invite form issue
+  * update language selector
 
- -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Fri, 24 Jan 2025 12:29:53 +0000
+ -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Mon, 27 Jan 2025 10:46:39 +0000
 
 hcw-athome-caregiver (0.5.20) focal; urgency=medium
 
