--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-hcw-athome-caregiver (0.5.24) UNRELEASED; urgency=medium
+hcw-athome-caregiver (0.5.25) UNRELEASED; urgency=medium
 
   [ Olivier Bitsch ]
   * Update changelog for 0.5.20 release
@@ -23,8 +23,9 @@ hcw-athome-caregiver (0.5.24) UNRELEASED; urgency=medium
   * refs #7995, invite form issue
   * update language selector
   * remove cancel tooltip
+  * refs #7985, new design for auth pages
 
- -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Mon, 27 Jan 2025 11:19:53 +0000
+ -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Wed, 29 Jan 2025 10:47:08 +0000
 
 hcw-athome-caregiver (0.5.20) focal; urgency=medium
 
