update locale tranlations

--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -241,7 +241,7 @@
         "ti": "Тігринья",
         "uk": "Українська",
         "sv": "Шведська",
-        "am": "Вірменський"
+        "hy": "Вірменський"
     },
     "overlay": {
         "close": "Закрити",
