--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-hcw-athome-caregiver (0.5.25) UNRELEASED; urgency=medium
+hcw-athome-caregiver (0.5.26) UNRELEASED; urgency=medium
 
   [ Olivier Bitsch ]
   * Update changelog for 0.5.20 release
@@ -24,8 +24,12 @@ hcw-athome-caregiver (0.5.25) UNRELEASED; urgency=medium
   * update language selector
   * remove cancel tooltip
   * refs #7985, new design for auth pages
+  * update locale tranlations
 
- -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Wed, 29 Jan 2025 10:47:08 +0000
+  [ Weblate ]
+  * Update translation files
+
+ -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Thu, 06 Feb 2025 07:08:52 +0000
 
 hcw-athome-caregiver (0.5.20) focal; urgency=medium
 
