--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-hcw-athome-caregiver (0.5.29) UNRELEASED; urgency=medium
+hcw-athome-caregiver (0.5.30) UNRELEASED; urgency=medium
 
   [ Olivier Bitsch ]
   * Update changelog for 0.5.20 release
@@ -42,8 +42,12 @@ hcw-athome-caregiver (0.5.29) UNRELEASED; urgency=medium
   * improve svg logos in pdf report
   * Fix metadata check to handle both null and empty object cases
   * add ability to edit consultation note
+  * refs #8318, Chat new line with SHIFT key
+  * refs #8321, Add close button to close overlay in history overlay
+  * improve headers color in exported pdf
+  * imporove pdf view when requester information exists
 
- -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Thu, 15 May 2025 14:53:37 +0000
+ -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Mon, 26 May 2025 13:14:52 +0000
 
 hcw-athome-caregiver (0.5.20) focal; urgency=medium
 
