--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-hcw-athome-caregiver (0.5.30) UNRELEASED; urgency=medium
+hcw-athome-caregiver (0.5.31) UNRELEASED; urgency=medium
 
   [ Olivier Bitsch ]
   * Update changelog for 0.5.20 release
@@ -46,8 +46,9 @@ hcw-athome-caregiver (0.5.30) UNRELEASED; urgency=medium
   * refs #8321, Add close button to close overlay in history overlay
   * improve headers color in exported pdf
   * imporove pdf view when requester information exists
+  * add translations for pdf
 
- -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Mon, 26 May 2025 13:14:52 +0000
+ -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Mon, 26 May 2025 15:34:54 +0000
 
 hcw-athome-caregiver (0.5.20) focal; urgency=medium
 
