--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-hcw-athome-caregiver (0.5.32) UNRELEASED; urgency=medium
+hcw-athome-caregiver (0.5.33) UNRELEASED; urgency=medium
 
   [ Olivier Bitsch ]
   * Update changelog for 0.5.20 release
@@ -9,10 +9,10 @@ hcw-athome-caregiver (0.5.32) UNRELEASED; urgency=medium
   * refs  #7983, add new statuses of invites
   * refs #7986, Translation Ukrainian missing
   * refs #7990, change view of invite table
-  * imporove invitations table
+  * improve invitations table
   * add config for tour translations, guest invite fixes
   * refs #7992, add new column called 'communication method' in invitations list
-  * refs #7982, have guests and expersts column even when they didn't join
+  * refs #7982, have guests and experts column even when they didn't join
 
   [ Weblate ]
   * Update translation files
@@ -24,7 +24,7 @@ hcw-athome-caregiver (0.5.32) UNRELEASED; urgency=medium
   * update language selector
   * remove cancel tooltip
   * refs #7985, new design for auth pages
-  * update locale tranlations
+  * update locale translations
 
   [ Weblate ]
   * Update translation files
@@ -37,7 +37,7 @@ hcw-athome-caregiver (0.5.32) UNRELEASED; urgency=medium
   * update 3rd Party Packages
   * remove deprecated protractor
   * add moment-timezone to allowedCommonJsDependencies
-  * imporove pdf download when there is logo url
+  * improve pdf download when there is logo url
   * fix permission for Microphone issue when calling to patient
   * improve svg logos in pdf report
   * Fix metadata check to handle both null and empty object cases
@@ -45,11 +45,13 @@ hcw-athome-caregiver (0.5.32) UNRELEASED; urgency=medium
   * refs #8318, Chat new line with SHIFT key
   * refs #8321, Add close button to close overlay in history overlay
   * improve headers color in exported pdf
-  * imporove pdf view when requester information exists
+  * improve pdf view when requester information exists
   * add translations for pdf
   * add global error handling
+  * improve chat loading
+  * hide global error handler when verifying refresh token
 
- -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Tue, 27 May 2025 11:05:08 +0000
+ -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Wed, 28 May 2025 14:55:32 +0000
 
 hcw-athome-caregiver (0.5.20) focal; urgency=medium
 
