handle invite not found

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -222,6 +222,7 @@
     "chooseDate": "Choose a date",
     "selectTimezone": "Select Timezone",
     "chooseTime": "Choose a time",
+    "linkSent": "Invite sent",
     "aa": "Afar",
     "ab": "Abkhazian",
     "ae": "Avestan",
