--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+hcw-athome-caregiver (0.5.35) UNRELEASED; urgency=medium
+
+  [ Olivier Bitsch ]
+  * Move back to bookworm
+
+  [ Gor Grigoryan ]
+  * skip some routes for error interceptor
+  * add template type when checking prefix
+  * fix expert invitation
+  * change expert invitation
+  * handle invite not found
+  * update send expert link endpoint body and error interceptor
+
+ -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Wed, 18 Jun 2025 09:36:49 +0000
+
 hcw-athome-caregiver (0.5.34) focal; urgency=medium
 
   [ Olivier Bitsch ]
