--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-hcw-athome-caregiver (0.5.35) UNRELEASED; urgency=medium
+hcw-athome-caregiver (0.5.36) UNRELEASED; urgency=medium
 
   [ Olivier Bitsch ]
   * Move back to bookworm
@@ -10,8 +10,17 @@ hcw-athome-caregiver (0.5.35) UNRELEASED; urgency=medium
   * change expert invitation
   * handle invite not found
   * update send expert link endpoint body and error interceptor
+  * add doctor information in consultation report
+  * show error dialog when getting blocked error only
+  * improve error handler
 
- -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Wed, 18 Jun 2025 09:36:49 +0000
+  [ Olivier Bitsch ]
+  * Added translation using Weblate (Spanish)
+
+  [ Gor Grigoryan ]
+  * imporove error interceptor
+
+ -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Mon, 30 Jun 2025 09:12:07 +0000
 
 hcw-athome-caregiver (0.5.34) focal; urgency=medium
 
