feat: Add Armd Spanish 🇪h 🇸 language support

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -631,7 +631,8 @@
   "selectLanguage": {
     "en": "English",
     "fr": "Français",
-    "uk": "Українська"
+    "uk": "Українська",
+    "es": "Español"
   },
   "pdf": {
     "consultationReport": "Consultation report",
