--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -494,7 +494,8 @@
     "selectLanguage": {
         "en": "English",
         "fr": "Français",
-        "uk": "Українська"
+        "uk": "Українська",
+        "es": "Español"
     },
     "metadata": {
         "Age": "Edad",
