--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -406,7 +406,8 @@
     "selectLanguage": {
         "en": "English",
         "fr": "Français",
-        "uk": "Українська"
+        "uk": "Українська",
+        "es": "Español"
     },
     "metadata": {
         "Age": "Age",
