--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -438,7 +438,8 @@
     "selectLanguage": {
         "en": "English",
         "fr": "Français",
-        "uk": "Українська"
+        "uk": "Українська",
+        "es": "Español"
     },
     "metadata": {
         "Age": "Вік",
