--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-hcw-athome-caregiver (0.5.36) UNRELEASED; urgency=medium
+hcw-athome-caregiver (0.5.37) UNRELEASED; urgency=medium
 
   [ Olivier Bitsch ]
   * Move back to bookworm
@@ -18,9 +18,22 @@ hcw-athome-caregiver (0.5.36) UNRELEASED; urgency=medium
   * Added translation using Weblate (Spanish)
 
   [ Gor Grigoryan ]
-  * imporove error interceptor
+  * improve error interceptor
 
- -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Mon, 30 Jun 2025 09:12:07 +0000
+  [ Eugene Paik ]
+  * Translated using Weblate (Spanish)
+
+  [ Gor Grigoryan ]
+  * refs #8414, show request and information when error is occurred
+
+  [ Eugene Paik ]
+  * Translated using Weblate (Spanish)
+  * Translated using Weblate (Spanish)
+
+  [ Gor Grigoryan ]
+  * feat: Add Spanish 🇪🇸language support
+
+ -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Thu, 10 Jul 2025 09:25:22 +0000
 
 hcw-athome-caregiver (0.5.34) focal; urgency=medium
 
