--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-hcw-athome-caregiver (0.5.37) UNRELEASED; urgency=medium
+hcw-athome-caregiver (0.5.38) UNRELEASED; urgency=medium
 
   [ Olivier Bitsch ]
   * Move back to bookworm
@@ -33,7 +33,13 @@ hcw-athome-caregiver (0.5.37) UNRELEASED; urgency=medium
   [ Gor Grigoryan ]
   * feat: Add Spanish 🇪🇸language support
 
- -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Thu, 10 Jul 2025 09:25:22 +0000
+  [ Eugene Paik ]
+  * Added translation using Weblate (Kazakh)
+
+  [ Gor Grigoryan ]
+  * translate role in pdf
+
+ -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Wed, 23 Jul 2025 08:34:50 +0000
 
 hcw-athome-caregiver (0.5.34) focal; urgency=medium
 
