add Kazakh (kk) language support

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -632,7 +632,8 @@
     "en": "English",
     "fr": "Français",
     "uk": "Українська",
-    "es": "Español"
+    "es": "Español",
+    "kk": "Қазақ"
   },
   "pdf": {
     "consultationReport": "Consultation report",
