--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -495,7 +495,8 @@
         "en": "English",
         "fr": "Français",
         "uk": "Українська",
-        "es": "Español"
+        "es": "Español",
+        "kk": "Қазақ"
     },
     "metadata": {
         "Age": "Edad",
