--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -407,7 +407,8 @@
         "en": "English",
         "fr": "Français",
         "uk": "Українська",
-        "es": "Español"
+        "es": "Español",
+        "kk": "Қазақ"
     },
     "metadata": {
         "Age": "Age",
