--- a/src/assets/i18n/kk.json
+++ b/src/assets/i18n/kk.json
@@ -30,6 +30,13 @@
         "requester": "Өтініш беруші",
         "scheduler": "Жоспарлаушы"
     },
+    "selectLanguage": {
+        "en": "English",
+        "fr": "Français",
+        "uk": "Українська",
+        "es": "Español",
+        "kk": "Қазақ"
+    },
     "metadata": {
         "Age": "Жасы",
         "Country": "Ел",
