--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -439,7 +439,8 @@
         "en": "English",
         "fr": "Français",
         "uk": "Українська",
-        "es": "Español"
+        "es": "Español",
+        "kk": "Қазақ"
     },
     "metadata": {
         "Age": "Вік",
