--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-hcw-athome-caregiver (0.5.39) UNRELEASED; urgency=medium
+hcw-athome-caregiver (0.5.40) UNRELEASED; urgency=medium
 
   [ Olivier Bitsch ]
   * Move back to bookworm
@@ -45,8 +45,9 @@ hcw-athome-caregiver (0.5.39) UNRELEASED; urgency=medium
 
   [ Gor Grigoryan ]
   * add Kazakh (kk) language support
+  * fix saving notification settings
 
- -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Tue, 05 Aug 2025 08:17:29 +0000
+ -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Mon, 18 Aug 2025 12:23:51 +0000
 
 hcw-athome-caregiver (0.5.34) focal; urgency=medium
 
