new dev release 0.5.42

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-hcw-athome-caregiver (0.5.41) UNRELEASED; urgency=medium
+hcw-athome-caregiver (0.5.42) UNRELEASED; urgency=medium
 
   [ Olivier Bitsch ]
   * Move back to bookworm
@@ -53,8 +53,10 @@ hcw-athome-caregiver (0.5.41) UNRELEASED; urgency=medium
   [ Gor Grigoryan ]
   * read chat messages when open consultation room
   * update jspdf and remove wait-on devDependencies
+  * fix tour finishing issue
+  * add skipping planning consultation and navigation after login
 
- -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Fri, 29 Aug 2025 14:44:18 +0000
+ -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Mon, 15 Sep 2025 16:09:10 +0000
 
 hcw-athome-caregiver (0.5.34) focal; urgency=medium
 
