--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-hcw-athome-caregiver (0.5.43) UNRELEASED; urgency=medium
+hcw-athome-caregiver (0.5.44) UNRELEASED; urgency=medium
 
   [ Olivier Bitsch ]
   * Move back to bookworm
@@ -56,8 +56,18 @@ hcw-athome-caregiver (0.5.43) UNRELEASED; urgency=medium
   * fix tour finishing issue
   * add skipping planning consultation and navigation after login
   * update socket.io-client
+  * update node version to 20
 
- -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Thu, 18 Sep 2025 14:42:27 +0000
+  [ Olivier Bitsch ]
+  * Switch to Alpine
+  * Add missing make command$
+  * Trigger release
+
+  [ Gor Grigoryan ]
+  * refs #8707, Managed by queue, #8725 Have preferred language for doctor
+  * refs #8722, Skip parameter for time estimation
+
+ -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Wed, 01 Oct 2025 08:10:27 +0000
 
 hcw-athome-caregiver (0.5.34) focal; urgency=medium
 
