add filter for handled by

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -32,6 +32,7 @@
     "filtersApplied": "Filters applied:",
     "filters": "Filters",
     "sent_by": "Invite sent by",
+    "handled_by": "Handled by",
     "queue": "Queue",
     "myself": "Myself",
     "somebodyElse": "Somebody else",
