--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-hcw-athome-caregiver (0.5.44) UNRELEASED; urgency=medium
+hcw-athome-caregiver (0.5.45) UNRELEASED; urgency=medium
 
   [ Olivier Bitsch ]
   * Move back to bookworm
@@ -66,8 +66,10 @@ hcw-athome-caregiver (0.5.44) UNRELEASED; urgency=medium
   [ Gor Grigoryan ]
   * refs #8707, Managed by queue, #8725 Have preferred language for doctor
   * refs #8722, Skip parameter for time estimation
+  * fix navigation when other doctors are calling to shared queue
+  * add filter for handled by
 
- -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Wed, 01 Oct 2025 08:10:27 +0000
+ -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Thu, 02 Oct 2025 15:40:46 +0000
 
 hcw-athome-caregiver (0.5.34) focal; urgency=medium
 
