Check if the caller is trying to call themselves

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -132,6 +132,7 @@
     "cameraSelection": "Camera selection",
     "close": "Close",
     "callError": "Unable to initiate call, server returned",
+    "selfCallNotAllowed": "Cannot make a call: You are assigned as both doctor and requester in this consultation. Please assign a different user to one of the roles.",
     "expert_link": "Expert Link"
   },
   "dashboard": {
