new dev release 0.5.51

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-hcw-athome-caregiver (0.5.50) UNRELEASED; urgency=medium
+hcw-athome-caregiver (0.5.51) UNRELEASED; urgency=medium
 
   [ Olivier Bitsch ]
   * Move back to bookworm
@@ -73,8 +73,9 @@ hcw-athome-caregiver (0.5.50) UNRELEASED; urgency=medium
   * linkify messages in chat
   * add not found page, change video call button apearing functionality, change link color in messages
   * add forbidden page, update dialog for planning consultation
+  * add a way to reschedule consultation
 
- -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Mon, 27 Oct 2025 10:55:26 +0000
+ -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Mon, 27 Oct 2025 11:01:50 +0000
 
 hcw-athome-caregiver (0.5.34) focal; urgency=medium
 
