--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-hcw-athome-caregiver (0.5.53) UNRELEASED; urgency=medium
+hcw-athome-caregiver (0.5.54) UNRELEASED; urgency=medium
 
   [ Olivier Bitsch ]
   * Move back to bookworm
@@ -78,8 +78,9 @@ hcw-athome-caregiver (0.5.53) UNRELEASED; urgency=medium
   * improve router guard
   * fix navigation after creating invite from dashboard
   * fix dashboard navigation when receiving new message
+  * improve pdf generation
 
- -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Mon, 10 Nov 2025 07:36:32 +0000
+ -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Mon, 10 Nov 2025 10:33:02 +0000
 
 hcw-athome-caregiver (0.5.34) focal; urgency=medium
 
