add guest role in translations

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -702,7 +702,8 @@
     "nurse": "Requester",
     "requester": "Requester",
     "scheduler": "Scheduler",
-    "expert": "Expert"
+    "expert": "Expert",
+    "guest": "Guest"
   },
   "notFound": {
     "title": "Page Not Found",
