add web view detection for whatsapp

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -724,5 +724,13 @@
     "Country": "Country",
     "Custom Id": "Custom Id",
     "Facility": "Facility"
+  },
+  "webviewWarning": {
+    "title": "Browser Not Supported",
+    "message": "Video calls are not supported in this browser.",
+    "description": "Please open this link in Chrome or Safari to join the consultation.",
+    "openInBrowser": "Open in Browser",
+    "urlCopied": "URL copied to clipboard. Please paste it in Chrome or Safari.",
+    "copyUrlManually": "Please copy this URL and paste it in your browser"
   }
 }
