--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-hcw-athome-caregiver (0.5.55) UNRELEASED; urgency=medium
+hcw-athome-caregiver (0.5.56) UNRELEASED; urgency=medium
 
   [ Olivier Bitsch ]
   * Move back to bookworm
@@ -82,8 +82,10 @@ hcw-athome-caregiver (0.5.55) UNRELEASED; urgency=medium
   * add expert role translation
   * add guest role in translations
   * update exper invite flow
+  * update hcw-stream-lib to 0.0.21
+  * add web view detection for whatsapp
 
- -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Wed, 19 Nov 2025 14:43:37 +0000
+ -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Thu, 08 Jan 2026 13:44:41 +0000
 
 hcw-athome-caregiver (0.5.34) focal; urgency=medium
 
