--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-hcw-athome-caregiver (0.5.56) UNRELEASED; urgency=medium
+hcw-athome-caregiver (0.5.57) UNRELEASED; urgency=medium
 
   [ Olivier Bitsch ]
   * Move back to bookworm
@@ -84,8 +84,9 @@ hcw-athome-caregiver (0.5.56) UNRELEASED; urgency=medium
   * update exper invite flow
   * update hcw-stream-lib to 0.0.21
   * add web view detection for whatsapp
+  * test user agent in whatsapp browser
 
- -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Thu, 08 Jan 2026 13:44:41 +0000
+ -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Thu, 08 Jan 2026 14:29:59 +0000
 
 hcw-athome-caregiver (0.5.34) focal; urgency=medium
 
