--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-hcw-athome-caregiver (0.5.57) UNRELEASED; urgency=medium
+hcw-athome-caregiver (0.5.58) UNRELEASED; urgency=medium
 
   [ Olivier Bitsch ]
   * Move back to bookworm
@@ -85,8 +85,9 @@ hcw-athome-caregiver (0.5.57) UNRELEASED; urgency=medium
   * update hcw-stream-lib to 0.0.21
   * add web view detection for whatsapp
   * test user agent in whatsapp browser
+  * add web view patterns
 
- -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Thu, 08 Jan 2026 14:29:59 +0000
+ -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Thu, 08 Jan 2026 14:40:35 +0000
 
 hcw-athome-caregiver (0.5.34) focal; urgency=medium
 
