--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-hcw-athome-caregiver (0.5.58) UNRELEASED; urgency=medium
+hcw-athome-caregiver (0.5.59) UNRELEASED; urgency=medium
 
   [ Olivier Bitsch ]
   * Move back to bookworm
@@ -86,8 +86,9 @@ hcw-athome-caregiver (0.5.58) UNRELEASED; urgency=medium
   * add web view detection for whatsapp
   * test user agent in whatsapp browser
   * add web view patterns
+  * update web view warning modal
 
- -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Thu, 08 Jan 2026 14:40:35 +0000
+ -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Thu, 08 Jan 2026 14:54:25 +0000
 
 hcw-athome-caregiver (0.5.34) focal; urgency=medium
 
