add switch user in top nav menu

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -604,6 +604,7 @@
   "topNav": {
     "profile": "Profile",
     "logout": "Logout",
+    "switchUser": "Switch User",
     "startTheNextConsultation": "Start the next consultation",
     "terminateTheConsultation": "Terminate the consultation",
     "patientFirstnameAndLastname": "Patient name",
