--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -391,6 +391,7 @@
     },
     "topNav": {
         "logout": "Se déconnecter",
+        "switchUser": "Changer d'utilisateur",
         "startTheNextConsultation": "Démarrer la consultation suivante",
         "terminateTheConsultation": "Terminer la consultation",
         "patientFirstnameAndLastname": "Nom du patient",
