--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-hcw-athome-caregiver (0.5.60) UNRELEASED; urgency=medium
+hcw-athome-caregiver (0.5.61) UNRELEASED; urgency=medium
 
   [ Olivier Bitsch ]
   * Move back to bookworm
@@ -88,8 +88,9 @@ hcw-athome-caregiver (0.5.60) UNRELEASED; urgency=medium
   * add web view patterns
   * update web view warning modal
   * remove userAgent debug content
+  * add switch user in top nav menu
 
- -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Thu, 08 Jan 2026 15:12:54 +0000
+ -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Tue, 20 Jan 2026 10:21:15 +0000
 
 hcw-athome-caregiver (0.5.34) focal; urgency=medium
 
