--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -516,7 +516,10 @@
     "sms": "SMS",
     "whatsapp": "WhatsApp",
     "email": "Email",
-    "manual": "Manual"
+    "manual": "Manual",
+    "getLink": "Get Link",
+    "getInviteLinkTooltip": "Get the invitation link",
+    "errorGettingLink": "Error getting the invitation link"
   },
   "sideChat": {
     "startTheConsultation": "Start the consultation"
