--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-hcw-athome-caregiver (0.5.61) UNRELEASED; urgency=medium
+hcw-athome-caregiver (0.5.62) UNRELEASED; urgency=medium
 
   [ Olivier Bitsch ]
   * Move back to bookworm
@@ -81,7 +81,7 @@ hcw-athome-caregiver (0.5.61) UNRELEASED; urgency=medium
   * improve pdf generation
   * add expert role translation
   * add guest role in translations
-  * update exper invite flow
+  * update expert invite flow
   * update hcw-stream-lib to 0.0.21
   * add web view detection for whatsapp
   * test user agent in whatsapp browser
@@ -89,8 +89,10 @@ hcw-athome-caregiver (0.5.61) UNRELEASED; urgency=medium
   * update web view warning modal
   * remove userAgent debug content
   * add switch user in top nav menu
+  * fix profile dropdown width
+  * add get link button in invites list
 
- -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Tue, 20 Jan 2026 10:21:15 +0000
+ -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Wed, 28 Jan 2026 06:42:54 +0000
 
 hcw-athome-caregiver (0.5.34) focal; urgency=medium
 
