--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-hcw-athome-caregiver (0.5.62) UNRELEASED; urgency=medium
+hcw-athome-caregiver (0.5.63) UNRELEASED; urgency=medium
 
   [ Olivier Bitsch ]
   * Move back to bookworm
@@ -91,8 +91,9 @@ hcw-athome-caregiver (0.5.62) UNRELEASED; urgency=medium
   * add switch user in top nav menu
   * fix profile dropdown width
   * add get link button in invites list
+  * fix doctor private note modal closing issue
 
- -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Wed, 28 Jan 2026 06:42:54 +0000
+ -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Wed, 04 Feb 2026 11:02:09 +0000
 
 hcw-athome-caregiver (0.5.34) focal; urgency=medium
 
