--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-hcw-athome-caregiver (0.5.63) UNRELEASED; urgency=medium
+hcw-athome-caregiver (0.5.64) UNRELEASED; urgency=medium
 
   [ Olivier Bitsch ]
   * Move back to bookworm
@@ -92,8 +92,9 @@ hcw-athome-caregiver (0.5.63) UNRELEASED; urgency=medium
   * fix profile dropdown width
   * add get link button in invites list
   * fix doctor private note modal closing issue
+  * add video call connection error handling and status feedback
 
- -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Wed, 04 Feb 2026 11:02:09 +0000
+ -- Gor Grigoryan <gorgrigoryan1997@gmail.com>  Thu, 05 Feb 2026 19:29:33 +0000
 
 hcw-athome-caregiver (0.5.34) focal; urgency=medium
 
